--- a/src/menu/MenuStyle.css
+++ b/src/menu/MenuStyle.css
@@ -39,7 +39,7 @@ body {
 }
 
 .temple-menu {
-    flex: 1;
+    flex: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -128,4 +128,13 @@ body {
 .temple-header::after {
     content: '_';
     animation: blink 1s infinite;
+}
+
+.temple-image {
+    display: block;
+    margin: 10px auto;
+    max-width: 400px;
+    height: auto;
+    border: 2px solid #00ff00;
+    border-radius: 5px;
 }
